--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -11,9 +11,13 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.1.2",
     "morgan": "~1.9.1",
+    "nodemon": "^3.0.3",
     "pug": "^3.0.2",
     "serve-favicon": "^2.5.0",
     "slugify": "^1.6.6"
